--- a/K_Bridge/Views/Cate/Post.cshtml
+++ b/K_Bridge/Views/Cate/Post.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewData["Title"] = "Bài viết";
     <link href="/css/Newest.css" rel="stylesheet" />
-    bool isCmtAvaiable = false;
+    bool isCmtAvaiable = true;
 }
 <div class="row mb-5">
     <div class="d-flex justify-content-start fs-4">
@@ -55,24 +55,88 @@
             </div>
             @if (isCmtAvaiable)
             {
-                <div class="row mb-5">
-                    <div class="col-6 d-flex justify-content-start fw-bold fs-4">
+                <div class="mt-5 mb-4 d-flex justify-content-between" >
+                    <div class="fw-bold fs-4 d-flex text-color-logo">
                         41 Câu trả lời
                     </div>
-                    <button class="col-3 filter-forum d-flex justify-content-center align-items-center mx-4">
-                        <div class="px-2">
-                            Diễn đàn
+                    <div class="d-flex text-color-header">
+                        <div class="d-flex justify-content-center align-items-center " >
+                                Sắp xếp theo:
                         </div>
-                        <img src="/img/icon_filter_forum_50.png" alt="Filter" width="15" height="15">
-                    </button>
-                    <button class="col-3 filter-forum d-flex justify-content-center align-items-center mx-2">
-                        <div class="px-2">
-                            Bộ lọc
-                        </div>
-                        <img src="/img/icon_filter_sort_50.png" alt="Filter" width="20" height="20">
-                    </button>
+                        <button class="d-flex px-2 justify-content-center align-items-center mx-4 rounded-pill" style="border: 1px solid #8E6745">
+                            <p class="m-0 p-0">Hữu ích nhất (Mặc định)</p>
+                            <img src="/img/icon_filter_forum_50.png" alt="Filter" width="15" height="15">
+                        </button>
+                    </div>
                 </div>
-                
+                <div class="row my-3 m-0" style="border-bottom: 1px solid #8E6745">
+                    <div class="col-lg-1 flex-column">
+                        <button class="m-1">
+                            <img src="~/img/like.png" alt="Like" />
+                        </button>
+                        <p class="mt-2 fs-6 fw-bold text-color-logo">-123</p>
+                        <button class="m-1">
+                            <img src="~/img/un_like.png" alt="Like" />
+                        </button>
+                    </div>
+                    <div class="col-lg-11">
+                        <div>
+                            Lectus quam id leo in vitae turpis massa. Justo laoreet sit amet cursus sit amet dictum sit amet. Aliquam ut porttitor leo a diam sollicitudin. Non arcu risus quis varius quam quisque id. Tempus iaculis urna id volutpat lacus laoreet non curabitur. Nec feugiat in fermentum posuere.
+                            <br />
+                            Quis enim lobortis scelerisque fermentum dui faucibus.
+                            Id eu nisl nunc mi ipsum faucibus vitae aliquet.
+                            <br />
+                            <br />
+                            Solution 1
+                            <br />
+                            Solution 2
+                            <br />
+                            Solution 3
+                            <br />
+                            Solution 4
+                            <br />
+                            Solution 5
+                        </div>
+                    </div>
+                    <div class="d-flex justify-content-end mb-2">
+                        <img src="~/img/user.jpg" class="rounded-circle" alt="Avatar" width="30" height="30">
+                        <div class="newest-card-username mx-2">User1 hỏi 10 phút trước</div>
+                    </div>
+                </div>
+                <div class="row my-3 m-0" style="border-bottom: 1px solid #8E6745">
+                    <div class="col-lg-1 flex-column">
+                        <button class="m-1">
+                            <img src="~/img/like.png" alt="Like" />
+                        </button>
+                        <p class="mt-2 fs-6 fw-bold text-color-logo">-123</p>
+                        <button class="m-1">
+                            <img src="~/img/un_like.png" alt="Like" />
+                        </button>
+                    </div>
+                    <div class="col-lg-11">
+                        <div>
+                            Lectus quam id leo in vitae turpis massa. Justo laoreet sit amet cursus sit amet dictum sit amet. Aliquam ut porttitor leo a diam sollicitudin. Non arcu risus quis varius quam quisque id. Tempus iaculis urna id volutpat lacus laoreet non curabitur. Nec feugiat in fermentum posuere.
+                            <br />
+                            Quis enim lobortis scelerisque fermentum dui faucibus.
+                            Id eu nisl nunc mi ipsum faucibus vitae aliquet.
+                            <br />
+                            <br />
+                            Solution 1
+                            <br />
+                            Solution 2
+                            <br />
+                            Solution 3
+                            <br />
+                            Solution 4
+                            <br />
+                            Solution 5
+                        </div>
+                    </div>
+                    <div class="d-flex justify-content-end mb-2">
+                        <img src="~/img/user.jpg" class="rounded-circle" alt="Avatar" width="30" height="30">
+                        <div class="newest-card-username mx-2">User1 hỏi 10 phút trước</div>
+                    </div>
+                </div>
             }
             <div>
                 <p class="fs-5 text-color-logo">
