--- a/K_Bridge/Views/Shared/Components/LayoutBoxChat/Default.cshtml
+++ b/K_Bridge/Views/Shared/Components/LayoutBoxChat/Default.cshtml
@@ -49,6 +49,27 @@
                 </div>
                 <div class="message fs-12 rounded-3 text-color-logo mb-1 word-break-all">Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn</div>
             </div>
+                 <div class="mb-2 d-md-flex flex-column">
+                <div class="d-md-flex align-items-center">
+                    <img src="/img/avatar.png" alt="avatar" class="me-2 rounded-circle" style="width: 20px; height: 20px;" />
+                    <div class="fs-12 text-color-logo mb-1 fw-bold flex-grow-1">Tên tài khoản</div>
+                </div>
+                <div class="message fs-12 rounded-3 text-color-logo mb-1 word-break-all">Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn</div>
+            </div>
+                 <div class="mb-2 d-md-flex flex-column">
+                <div class="d-md-flex align-items-center">
+                    <img src="/img/avatar.png" alt="avatar" class="me-2 rounded-circle" style="width: 20px; height: 20px;" />
+                    <div class="fs-12 text-color-logo mb-1 fw-bold flex-grow-1">Tên tài khoản</div>
+                </div>
+                <div class="message fs-12 rounded-3 text-color-logo mb-1 word-break-all">Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn</div>
+            </div>
+            <div class="mb-2 d-md-flex flex-column">
+                <div class="d-md-flex align-items-center">
+                    <img src="/img/avatar.png" alt="avatar" class="me-2 rounded-circle" style="width: 20px; height: 20px;" />
+                    <div class="fs-12 text-color-logo mb-1 fw-bold flex-grow-1">Tên tài khoản</div>
+                </div>
+                <div class="message fs-12 rounded-3 text-color-logo mb-1 word-break-all">Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn Tin nhắn của bạn</div>
+            </div>
         </div>
     </div>
     <div class="mx-3 my-2 input-group w-auto rounded-8 bg-main-color-btn ">
