--- a/K_Bridge/Views/Cate/TopicList.cshtml
+++ b/K_Bridge/Views/Cate/TopicList.cshtml
@@ -4,7 +4,7 @@
     <link href="/css/Newest.css" rel="stylesheet" />
 }
 <div class="row mb-5">
-    <div class="col-6 d-flex justify-content-start fw-bold fs-4">
+    <div class="col-6 d-flex justify-content-start fw-bold fs-4 text-uppercase">
         TÀI LIỆU TỔNG HỢP
     </div>
     <button class="col-3 filter-forum d-flex justify-content-center align-items-center mx-4">
