--- a/K_Bridge/Views/Home/Search.cshtml
+++ b/K_Bridge/Views/Home/Search.cshtml
@@ -6,13 +6,13 @@
 }
 
 <div class="row">
-    <div class="text-uppercase fs-4">
+    <div class=" fs-4">
         Kết quả tìm kiếm
     </div>
     <div class="fs-5 d-flex my-2">
-        Kết quả tìm kiếm cho từ khoá <p class="">"SearchKey"</p>
+        Kết quả cho từ khoá <p class="ms-2">"SearchKey"</p>
     </div>
-    <div class="pb-3" style="border-bottom: 1px solid #493422">
+    <div class="pb-3 fw-bold" style="border-bottom: 1px solid #493422">
         921 Kết quả
     </div>
 </div>
