--- a/K_Bridge/Views/Home/Index.cshtml
+++ b/K_Bridge/Views/Home/Index.cshtml
@@ -30,74 +30,75 @@
         </button>
         @* Topic *@
         <div id="container-new-1">
-            <div class="row m-0 px-3 py-2" style="border-bottom:2px solid;">
+            <div class="row m-0 px-3 py-2" style="border-top:2px solid #8E6745;">
                 <div class="col-2 d-flex flex-column justify-content-center">
-                    <div class="newest-card-stat py-2">0 Câu trả lời</div>
-                    <div class="newest-card-stat py-2">10 Lượt xem</div>
+                    <div class="newest-card-stat py-1">0 Câu trả lời</div>
+                    <div class="newest-card-stat py-1">10 Lượt xem</div>
                 </div>
                 <div class="col-10">
                     <div class="d-flex">
-                        <div class="newest-card-title">Xin đề cương môn ABC</div>
-                        <button class="newest-card-tag px-5 mx-3 mt-1">Tài liệu</button>
+                        <div class="newest-card-title fs-6">Xin đề cương môn ABC</div>
+                        <button class="newest-card-tag px-5 mx-2">Tài liệu</button>
                     </div>
-                    <div class="newest-card-des">Hôm qua mình nghỉ học nên không biết có đề cương, mình cũng không quen ai trên lớp nên bạn nào học cô Thuỷ cho mình xin đề cương ôn tập.</div>
-                    <div class="d-flex justify-content-end mt-2">
-                        <img src="/img/user.jpg" class="rounded-circle" alt="Avatar" width="30" height="30">
-                        <div class="newest-card-username mx-2">User1 hỏi 10 phút trước</div>
+                    <div class="fs-12 text-color-header py-1">Hôm qua mình nghỉ học nên không biết có đề cương, mình cũng không quen ai trên lớp nên bạn nào học cô Thuỷ cho mình xin đề cương ôn tập.</div>
+                    <div class="d-flex justify-content-end mt-1">
+                        <img src="/img/user.jpg" class="rounded-circle" alt="Avatar" width="24" height="24">
+                        <div class="newest-card-username fs-12 mx-2">User1 hỏi 10 phút trước</div>
                     </div>
                 </div>
             </div>
-            <div class="row m-0 px-3 py-2" style="border-bottom:2px solid;">
+            <div class="row m-0 px-3 py-2" style="border-top:2px solid #8E6745;">
                 <div class="col-2 d-flex flex-column justify-content-center">
-                    <div class="newest-card-stat py-2">0 Câu trả lời</div>
-                    <div class="newest-card-stat py-2">10 Lượt xem</div>
+                    <div class="newest-card-stat py-1">0 Câu trả lời</div>
+                    <div class="newest-card-stat py-1">10 Lượt xem</div>
                 </div>
                 <div class="col-10">
                     <div class="d-flex">
-                        <div class="newest-card-title">Xin đề cương môn ABC</div>
-                        <button class="newest-card-tag px-5 mx-3 mt-1">Tài liệu</button>
+                        <div class="newest-card-title fs-6">Xin đề cương môn ABC</div>
+                        <button class="newest-card-tag px-5 mx-2">Tài liệu</button>
                     </div>
-                    <div class="newest-card-des">Hôm qua mình nghỉ học nên không biết có đề cương, mình cũng không quen ai trên lớp nên bạn nào học cô Thuỷ cho mình xin đề cương ôn tập.</div>
-                    <div class="d-flex justify-content-end mt-2">
-                        <img src="/img/user.jpg" class="rounded-circle" alt="Avatar" width="30" height="30">
-                        <div class="newest-card-username mx-2">User1 hỏi 10 phút trước</div>
+                    <div class="fs-12 text-color-header py-1">Hôm qua mình nghỉ học nên không biết có đề cương, mình cũng không quen ai trên lớp nên bạn nào học cô Thuỷ cho mình xin đề cương ôn tập.</div>
+                    <div class="d-flex justify-content-end mt-1">
+                        <img src="/img/user.jpg" class="rounded-circle" alt="Avatar" width="24" height="24">
+                        <div class="newest-card-username fs-12 mx-2">User1 hỏi 10 phút trước</div>
                     </div>
                 </div>
             </div>
-            <div class="row m-0 px-3 py-2" style="border-bottom:2px solid;">
+            <div class="row m-0 px-3 py-2" style="border-top:2px solid #8E6745;">
                 <div class="col-2 d-flex flex-column justify-content-center">
-                    <div class="newest-card-stat py-2">0 Câu trả lời</div>
-                    <div class="newest-card-stat py-2">10 Lượt xem</div>
+                    <div class="newest-card-stat py-1">0 Câu trả lời</div>
+                    <div class="newest-card-stat py-1">10 Lượt xem</div>
                 </div>
                 <div class="col-10">
                     <div class="d-flex">
-                        <div class="newest-card-title">Xin đề cương môn ABC</div>
-                        <button class="newest-card-tag px-5 mx-3 mt-1">Tài liệu</button>
+                        <div class="newest-card-title fs-6">Xin đề cương môn ABC</div>
+                        <button class="newest-card-tag px-5 mx-2">Tài liệu</button>
                     </div>
-                    <div class="newest-card-des">Hôm qua mình nghỉ học nên không biết có đề cương, mình cũng không quen ai trên lớp nên bạn nào học cô Thuỷ cho mình xin đề cương ôn tập.</div>
-                    <div class="d-flex justify-content-end mt-2">
-                        <img src="/img/user.jpg" class="rounded-circle" alt="Avatar" width="30" height="30">
-                        <div class="newest-card-username mx-2">User1 hỏi 10 phút trước</div>
+                    <div class="fs-12 text-color-header py-1">Hôm qua mình nghỉ học nên không biết có đề cương, mình cũng không quen ai trên lớp nên bạn nào học cô Thuỷ cho mình xin đề cương ôn tập.</div>
+                    <div class="d-flex justify-content-end mt-1">
+                        <img src="/img/user.jpg" class="rounded-circle" alt="Avatar" width="24" height="24">
+                        <div class="newest-card-username fs-12 mx-2">User1 hỏi 10 phút trước</div>
                     </div>
                 </div>
             </div>
-            <div class="row m-0 px-3 py-2" style="border-bottom:2px solid;">
+            <div class="row m-0 px-3 py-2" style="border-top:2px solid #8E6745;">
                 <div class="col-2 d-flex flex-column justify-content-center">
-                    <div class="newest-card-stat py-2">0 Câu trả lời</div>
-                    <div class="newest-card-stat py-2">10 Lượt xem</div>
+                    <div class="newest-card-stat py-1">0 Câu trả lời</div>
+                    <div class="newest-card-stat py-1">10 Lượt xem</div>
                 </div>
                 <div class="col-10">
                     <div class="d-flex">
-                        <div class="newest-card-title">Xin đề cương môn ABC</div>
-                        <button class="newest-card-tag px-5 mx-3 mt-1">Tài liệu</button>
+                        <div class="newest-card-title fs-6">Xin đề cương môn ABC</div>
+                        <button class="newest-card-tag px-5 mx-2">Tài liệu</button>
                     </div>
-                    <div class="newest-card-des">Hôm qua mình nghỉ học nên không biết có đề cương, mình cũng không quen ai trên lớp nên bạn nào học cô Thuỷ cho mình xin đề cương ôn tập.</div>
-                    <div class="d-flex justify-content-end mt-2">
-                        <img src="/img/user.jpg" class="rounded-circle" alt="Avatar" width="30" height="30">
-                        <div class="newest-card-username mx-2">User1 hỏi 10 phút trước</div>
+                    <div class="fs-12 text-color-header py-1">Hôm qua mình nghỉ học nên không biết có đề cương, mình cũng không quen ai trên lớp nên bạn nào học cô Thuỷ cho mình xin đề cương ôn tập.</div>
+                    <div class="d-flex justify-content-end mt-1">
+                        <img src="/img/user.jpg" class="rounded-circle" alt="Avatar" width="24" height="24">
+                        <div class="newest-card-username fs-12 mx-2">User1 hỏi 10 phút trước</div>
                     </div>
                 </div>
             </div>
+
         </div>
     </div>
 
