--- a/K_Bridge/Views/Shared/LayoutHeader.cshtml
+++ b/K_Bridge/Views/Shared/LayoutHeader.cshtml
@@ -1,14 +1,14 @@
 ﻿@{
-    bool isLoggedIn = false;
+    bool isLoggedIn = true;
 }
 
 <div class="container-fluid py-md-4" style="max-width: 97%;">
     <div class="row align-items-center" >
         <div class="col-auto col-md-2">
-            <div class="d-flex align-items-center">
+            <a href="/" class="d-flex align-items-center text-decoration-none pointer-event">
                 <img class="img-fluid" style="max-height: 40px;" src="/img/Logo.png" alt="Logo">
                 <span class="ms-2 kbridge-text text-color-layout fs-4 d-none d-md-inline">K-BRIDGE</span>
-            </div>
+            </a>
         </div>
         <div class="col col-md-7 d-flex justify-content-center">
             <div class="input-group rounded-2 border border-main-color-layout px-2" style="max-width: 420px;">
