--- a/K_Bridge/Views/Shared/LayoutHeader.cshtml
+++ b/K_Bridge/Views/Shared/LayoutHeader.cshtml
@@ -31,7 +31,7 @@
             {
                 <div class="d-md-flex align-items-center mx-3">
                     <img src="/img/avatar_40.png" alt="avatar" class="me-2 rounded-3" style="width: 40px; height: 40px;" />
-                    <div class=" text-color-background mb-1 fw-bold flex-grow-1">Tên tài khoản</div>
+                    <div class=" text-color-background mb-1 fw-bold flex-grow-1">User</div>
                 </div>
             }
         </div>
