--- a/K_Bridge/Views/_ViewImports.cshtml
+++ b/K_Bridge/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using K_Bridge
 @using K_Bridge.Models
+@using K_Bridge.Models.ViewModels
 @using K_Bridge.Infrastructure
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
