--- a/K_Bridge/Views/Shared/_Layout.cshtml
+++ b/K_Bridge/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
 </head>
 <body>
     <header class="bg-main-color-header">
-        @await Html.PartialAsync("LayoutHeader")
+        <vc:layout-header />
     </header>
     <div class="container-fluid">
         <div class="row main-content mt-4 mx-3">
